--- a/FrontendVuetify/package.json
+++ b/FrontendVuetify/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.0.29",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
